--- a/index.html
+++ b/index.html
@@ -5,5 +5,17 @@
 </head>
 <body>
 <img src="img/pemandangan.jpg">
+<form >
+	<label>
+		Username :
+		<input type="text" name="username">
+	</label>
+	<br>
+	<label>
+		password :
+		<input type="password" name="password">
+	</label>
+	<br>
+</form>
 </body>
 </html>
